--- a/front/package.json
+++ b/front/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/lab": "^4.0.0-alpha.61",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -10,6 +12,7 @@
     "react-calendar": "^4.6.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
+    "react-select": "^5.7.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
